test/Sema/for.src
// V %srcc --sema --verify %s
program test;

for i in 1 do {} // expected-error: Invalid type 'int' for range of 'for' loop
for i in {} do {} // expected-error: Invalid type 'void' for range of 'for' loop

for i in 1..=3 do i++; // expected-error: Operand of '++' must be an lvalue
for i in 1..=3 do i + 3;

for enum j, i in 1..=3 do j++; // expected-error: Operand of '++' must be an lvalue
for enum i, i in 1..=3 do i + 3; // expected-error (Ambiguous symbol 'i') expected-note 2 (Candidate here)
for enum j, i in 1..=3 do i + j;

for i, j in 1..=2, 1..=2 {}
for enum k, i, j in 1..=2, 1..=2 {}
for enum k, j in 1..=2, 1..=2 {}
for enum k in 1..=2, 1..=2 {}
for 1..=2, 1..=2 {}
for 1..=2 {}
for i in "abcd" do {}
for enum j, i in "abcd" do {}

for i, j in 1..=2 {} // expected-error: 'for' loop declares more variables than it has ranges (2 vs 1)
for i, j, k in 1..=2 {} // expected-error: 'for' loop declares more variables than it has ranges (3 vs 1)

for i, i in 1..=2, 1..=2 {}
for i, i in 1..=2, 1..=2 do i + 1; // expected-error (Ambiguous symbol 'i') expected-note 2 (Candidate here)
for enum i, i in "abcd" do i; // expected-error (Ambiguous symbol 'i') expected-note 2 (Candidate here)

// The loop variable(s) are not available in the ranges.
for enum k, l, i, j in
    l..=1, // expected-error: Unknown symbol 'l'
    j..=2, // expected-error: Unknown symbol 'j'
    i..=3, // expected-error: Unknown symbol 'i'
    k..=4  // expected-error: Unknown symbol 'k'
;

var a1 = int[5](1, 2, 3, 4, 5);
for i in a1 do {}

var a2 = int[7](1, 2, 3, 4, 5);
for i in a2 do {}

var a3 = int[7](9);
for i in a3 do {}
